# pyntegrant

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  notes.org  pyproject.toml  tox.ini
docs/source/: api.rst  conf.py  example.rst  index.rst  quickstart.rst
example/: counter_processor.py  interfaces.py  main.py  string_input.py  text_analyzer.py  text_output.py
pyntegrant/: helpers.py  initializer.py  loaders.py  map.py  system.py
tests/: test_build.py  test_initializer.py  test_map.py  test_pyntegrant.py
